added code for config server and discovery client
